--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -34,21 +34,21 @@ jobs:
         sudo apt-get -y install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd fakeroot \
         cpio git python-docutils gettext automake autopoint texinfo build-essential help2man \
         pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget
+   
     - name: Clone source code
       run: |
         if [ $KERNEL = "4.4" ] ; then
         git clone --depth=1 https://github.com/Ryukarin/padavan-4.4.git /opt/rt-n56u
         else
-        git clone --depth=1 https://github.com/Ryukarin/rt-n56u.git /opt/rt-n56u
+        git clone --depth=1 https://github.com/chongshengB/rt-n56u.git /opt/rt-n56u
         fi
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
+ 
     - name: Build Firmware
       run: |
         cd /opt/rt-n56u/trunk
-        # 替换logo
-        sh change_logo.sh $TNAME
         if [ ! -f configs/templates/$TNAME.config ] ; then
         echo "configs/templates/$TNAME.config not found "
         exit 1
